--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pet Care & Expense Tracker</title>
+    <!-- FIX FOR GITHUB PAGES: This meta tag forces correct character encoding -->
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Load Phosphor Icons for a friendly, modern look -->
     <script src="https://unpkg.com/@phosphor-icons/web@2.0.3"></script>
