--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
         </div>
 
         <!-- Expense Tracker Tab -->
-        <div id="expenses" class="tab-content hidden">
+        <div id="expenses" class="tab-content">
             <h2 class="text-2xl font-bold mb-4 text-white flex items-center">
                 <i class="ph-currency-circle-dollar text-3xl mr-2" style="color: var(--color-secondary-accent);"></i> Expense Log
             </h2>
