--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
             min-height: 100vh;
             display: flex;
             justify-content: center;
-            align-items: center;
+            /* REMOVED: align-items: center; */ 
             padding: 20px;
+            padding-top: 50px; /* Added padding to ensure content is visible */
         }
         .tracker-container {
             width: 100%;
