--- a/index.html
+++ b/index.html
@@ -14,24 +14,26 @@
             --color-primary-accent: #00bcd4;
             --color-secondary-accent: #ffeb3b;
         }
-         body {
          font-family: 'Inter', sans-serif;
-         background-color: var(--color-bg-deep);
-         min-height: 100vh;
-         /* Removed flex centering for better scrolling */
-         /* Removed padding-top for full responsiveness */
-         padding: 20px;
+    background-color: var(--color-bg-deep);
+    min-height: 100vh;
+    /* Add flex centering to put the whole block in the middle horizontally */
+    display: flex; 
+    justify-content: center; 
+    /* Use flex-start to ensure the block starts at the top of the screen */
+    align-items: flex-start; 
+    padding: 20px;
         }
         .tracker-container {
          width: 100%;
-         max-width: 1000px;
-         box-shadow: 0 20px 40px rgba(0, 0, 0, 0.6);
-         background-color: var(--color-card-dark);
-         border-radius: 1.5rem;
-         overflow: hidden;
-         border: 1px solid #3d3d3d; 
-         margin-top: 30px; /* Add margin for spacing at the top */
-         margin-bottom: 30px;
+    max-width: 1000px;
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.6);
+    background-color: var(--color-card-dark);
+    border-radius: 1.5rem;
+    overflow: hidden;
+    border: 1px solid #3d3d3d; 
+    margin-top: 30px; /* Ensures the app isn't right at the top edge */
+    margin-bottom: 30px;
         }
         header { background-color: #111111; }
         .header-title { color: white; }
